--- a/WorkingGUI2/GUISample.css
+++ b/WorkingGUI2/GUISample.css
@@ -1,6 +1,8 @@
-body {
-   padding: 0;
-   margin: 0;
+body 
+{
+	height: 100%; 
+	width: 100%; 
+	margin: 0;
 }
 
 table.layout
@@ -13,7 +15,7 @@ table.layout
 	margin-left:auto;
 	margin-right:auto;
 	width:75%;
-	height:50%;
+	height:100%;
 	min-width:700px;
 }
 
@@ -126,7 +128,11 @@ td.controlButton
 border-style:solid;
 border-width:5;
 border-color:3F3F3F;
-width:25%;
+text-align:center;
+vertical-align:center;
+margin-left:auto;
+margin-right:auto;
+width:33%;
 height:25%;
 }
 
@@ -160,6 +166,6 @@ width:40px;
 
 img.icon
 {
-height:20px;
-width:20px;
+height:30px;
+width:30px;
 }
