--- a/Old/ChessGameGUI/GUISample.css
+++ b/Old/ChessGameGUI/GUISample.css
@@ -39,6 +39,11 @@ body {
     height: 100%;
 }
 
+.endGameButtons {
+    position: relative;
+    bottom: 0;
+}
+
 .header {
     width: 100%;
     background-color: #900;
